# app/docs/swagger.json
@@ -446,7 +446,13 @@
         "server.ClickResp": {
             "type": "object",
             "properties": {
+                "downloaded": {
+                    "type": "string"
+                },
                 "navigated": {
+                    "type": "boolean"
+                },
+                "needs_file": {
                     "type": "boolean"
                 },
                 "ok": {
